--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,13 @@
 ---
-name: Tails Azimuth
+name: Brian Ji 
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
+occupation: 11th Grade
+company: Seoul International School 
 email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Welcome to my lettuce growing diary — where I share weekly updates, tips, and photos from my backyard garden!
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+Brian Ji is the proud owner of this lettuce growing diary, sharing his journey from tiny seeds to lush green harvests.
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
