change post draft mode

--- a/data/blog/june.mdx
+++ b/data/blog/june.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Monthly Log - June 2026'
 date: '2026-06-30'
-draft: true
+draft: false
 tags: ['log']
 summary: A monthly log of introducing our lovely lettuces growing!
 ---
