--- a/data/blog/may.mdx
+++ b/data/blog/may.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Monthly Log - May 2026'
 date: '2026-05-31'
-draft: true
+draft: false
 tags: ['log']
 summary: A monthly log of introducing our lovely lettuces growing!
 ---
