--- a/data/blog/setting-up-the-farm.mdx
+++ b/data/blog/setting-up-the-farm.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Setting up the Farm'
 date: '2026-05-03'
-draft: true
+draft: false
 tags: ['log']
 summary: Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
 ---
