change design colorscheme

--- a/data/blog/june.mdx
+++ b/data/blog/june.mdx
@@ -3,7 +3,7 @@ title: 'Monthly Log - June 2026'
 date: '2026-06-30'
 draft: false
 tags: ['log']
-summary: A monthly log of introducing our lovely lettuces growing!
+summary: Lettuce growth filled with challenges, steady recovery, and unexpected strength.
 ---
 
 ## June 8, 2025
