--- a/data/blog/may.mdx
+++ b/data/blog/may.mdx
@@ -3,7 +3,7 @@ title: 'Monthly Log - May 2026'
 date: '2026-05-31'
 draft: false
 tags: ['log']
-summary: A monthly log of introducing our lovely lettuces growing!
+summary: May marked the start of our butterhead lettuce journey—from planting seedlings and overcoming root damage to boosting growth with CO₂ enrichment.
 ---
 
 ## May 10, 2025: Delivery Day
