--- a/data/blog/setting-up-the-farm.mdx
+++ b/data/blog/setting-up-the-farm.mdx
@@ -3,7 +3,7 @@ title: 'Setting up the Farm'
 date: '2026-05-03'
 draft: false
 tags: ['log']
-summary: Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+summary: Automated farming begins—remote control, smart nutrients, seed to harvest.
 ---
 
 ![machine](/static/images/demo/1.png)
