monthly log august added

--- a/data/blog/june.mdx
+++ b/data/blog/june.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Monthly Log - June 2026'
-date: '2026-06-30'
+title: 'Monthly Log - June 2025'
+date: '2025-06-30'
 draft: false
 tags: ['log']
 summary: Lettuce growth filled with challenges, steady recovery, and unexpected strength.
@@ -8,9 +8,17 @@ summary: Lettuce growth filled with challenges, steady recovery, and unexpected 
 
 ## June 8, 2025
 
-Visited a farm that uses aeroponics to grow plants. 
+Visited a farm that uses aeroponics to grow plants.
 
-<div style={{ position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', margin: '1.5rem 0' }}>
+<div
+  style={{
+    position: 'relative',
+    paddingBottom: '56.25%',
+    height: 0,
+    overflow: 'hidden',
+    margin: '1.5rem 0',
+  }}
+>
   <iframe
     src="https://www.youtube.com/embed/mXy--V_TuH8"
     title="YouTube video player"
@@ -29,18 +37,18 @@ Visited a farm that uses aeroponics to grow plants.
 
 Met with an aeroponics expert and inquired about the damaged roots.
 
-He said, “If magnesium nitrate had been sprayed on the leaves before the roots turned yellow, 
+He said, “If magnesium nitrate had been sprayed on the leaves before the roots turned yellow,
 they would’ve returned to green within a day.” He reassured me that the issue wasn’t serious and not to worry.
 
-Following his advice that lettuce seedlings should be grown separately, 
+Following his advice that lettuce seedlings should be grown separately,
 I began a comparison test using two different materials: sponge and rockwool.
 
 ![alt](/static/images/june/1.png)
 
 ## June 10, 2025
 
-Within a week, the nutrient issue was resolved, and the plants grew rapidly, consuming more water. 
-As a result, the water tank ran dry, and 90% of the plants died! 
+Within a week, the nutrient issue was resolved, and the plants grew rapidly, consuming more water.
+As a result, the water tank ran dry, and 90% of the plants died!
 
 ![alt](/static/images/june/2.png)
 
