added new posts and pin function

--- a/data/blog/august.mdx
+++ b/data/blog/august.mdx
@@ -3,7 +3,7 @@ title: 'Monthly Log - August 2025'
 date: '2025-08-31'
 draft: false
 tags: ['log']
-summary: Lettuce growth filled with challenges, steady recovery, and unexpected strength.
+summary: Finally, a successful ending with breaking the 28 day barrier!
 ---
 
 ## August 13, 2025
@@ -31,3 +31,67 @@ Completed additional sowing, totalling 512 plants.
 ![alt](/static/images/august/4.png)
 
 Notable acceleration in growth rate observed in Curreo plants located on the upper shelves (2nd–4th floors), where root development was already established.
+
+## August 19, 2025
+
+### Knocking on Seoul’s Biggest Markets
+
+Visited the Seoul Agro-Fisheries & Food Corporation, which manages Garak, Songpa, and Yangjae markets. I wanted to see if our Farm Cube Ultra lettuce could really be distributed through official channels. The answer? Yes—as long as we ship about 40,000 heads (roughly 2 tons) per month. That’s enough to qualify as a small-scale distributor. I also learned how to register as a shipping business and even got a peek at potential revenue.
+
+![alt](/static/images/august/5.JPG)
+
+_First steps into Seoul’s largest wholesale hub_
+
+## August 20, 2025
+
+### Chasing the Magic 28-Day Cycle
+
+Last night, I checked that our new CCTV and internet systems were running smoothly. Before, I sometimes lost crops without realizing it—roots dried out during power cuts, or pumps stopped and caused overflows. Now I can keep an eye on everything from anywhere, which means those risks are gone. Honestly, I don’t think conventional hydroponics machines could ever achieve this speed.
+
+![alt](/static/images/august/6.jpg)
+
+_Remote monitoring: no more surprises, just growth_
+
+Our lettuce is growing like never before—nearly hitting the 28-day harvest cycle. Traditional machines usually take about 42 days, so this is a huge leap forward. Even compared to the manufacturer’s own settings, ours are faster. Why? Because we’ve been running constant A/B tests to find better tweaks. Funny enough, now it’s us telling the manufacturer which LED spectrum, nutrient mix, temperature, and humidity settings to use. They’re even considering adopting the new sponge we suggested—one with rockwool-level water retention and better aeration, perfect for aeroponics.
+
+![alt](/static/images/august/7.jpeg)
+
+_Lettuce hitting 30 days—fast, green, and thriving_
+
+The manufacturer was so impressed with our pilot data that they proposed something bold: a 990 m² lettuce farm (about 300 pyeong) with modular racks, cutting costs and aiming for annual revenue of 2 billion KRW.
+
+## August 21, 2025
+
+### Checking Market Prices
+
+Looked into retail prices today. A single head of lettuce sells for around ₩4,000 (≈ $3), and wholesale is at least ₩3,000. Not bad for a plant that grows faster than ever.
+
+![alt](/static/images/august/8.jpeg)
+
+_Market stalls full of greens—pricing the future_
+
+## August 22, 2025
+
+### Packaging for Speedy Growth
+
+If it weren’t for electricity hiccups, I’d probably only need to check the system once every two weeks. That’s how stable it’s become.
+
+The lettuce is growing so quickly I had to order packaging materials earlier than expected. At this rate, hitting the dream cycle of 28 days seems certain. Next weekend, I’ll weigh the harvest on a precision scale—can’t wait to see the numbers.
+
+![alt](/static/images/august/9.jpeg)
+
+_Systems stabilized—now it’s all about growth_
+
+## August 27, 2025
+
+### Breaking the Barrier
+
+**Success!** We finally broke the 28-day barrier. I harvested one head as a test, and it tasted fantastic—crisp, fresh, and full of promise for the future of our farm.
+
+![alt](/static/images/august/10.jpg)
+
+_First harvest at 28 days—fresh and crunchy victory_
+
+![alt](/static/images/august/11.jpeg)
+
+_Taste test approved: crisp, sweet, and delicious_
